# twinforge

./: .gitignore  .gitmodules  README.md  artigo_celula_carga.tex
docs/: control_plant.md  index.html
images/: Vista geral da bancada física CR10 + COVVI Hand.HEIC  covvi_hand_pinch_grasp_cube.HEIC  covvi_hand_power_grasp_bottle - Copia.HEIC  tcc_screencast_2026-05-31_17-11-10.webm  tcc_screencast_2026-05-31_17-12-03.webm  tcc_screencast_2026-05-31_17-14-25.webm  tcc_screencast_2026-05-31_17-16-24.webm  tcc_screencast_2026-07-06_10-29-11.webm  tcc_screencast_2026-07-06_11-26-00.webm
sensors/: load_cell_calib.json  make_paper_figures.py
sensors/Data/: .~lock.20260702_134856__samples.csv#  20260702_134006__samples.csv  20260702_134006__summary.json  20260702_134856__samples.csv  20260702_134856__summary.json  20260702_140914__samples.csv  20260702_140914__summary.json  20260702_141040__samples.csv  20260702_141040__summary.json  20260702_141147__samples.csv  20260702_141147__summary.json  20260702_141239__samples.csv  20260702_141239__summary.json  20260702_141515__samples.csv  20260702_141515__summary.json  20260702_142212__samples.csv  20260702_142212__summary.json  20260704_141202__params.json  20260704_141202__samples.csv  20260704_141202__summary.json  20260704_141252__samples.csv  20260704_141252__summary.json  20260704_142435__samples.csv  20260704_142435__summary.json  20260704_142507__samples.csv  20260704_142507__summary.json  20260704_142606__samples.csv  20260704_142606__summary.json  20260704_144805__samples.csv  20260704_144805__summary.json  20260704_145016__samples.csv  20260704_145016__summary.json  20260704_145119__params.json  20260704_145119__samples.csv  (+220 more)
src/eci_ros/covvi_interfaces/: CMakeLists.txt  package.xml
src/eci_ros/covvi_interfaces/msg/: BaseControlMsg.msg  BaseIntEnum.msg  BasePrimitive.msg  BaseStrEnum.msg  BuiltinGripID.msg  BulkDataType.msg  BulkMsg.msg  BulkRequestMsg.msg  BulkResponseMsg.msg  Command.msg  CommandCode.msg  CommandString.msg  ControlMsg.msg  CurrentGrip.msg  CurrentGripGripIdMsg.msg  CurrentGripID.msg  CurrentGripMsg.msg  CurrentGripTableMsg.msg  DeviceClass.msg  DeviceClassType.msg  DeviceColour.msg  DeviceGlove.msg  DeviceHandType.msg  DeviceIdentityMsg.msg  DeviceInfoMsg.msg  DeviceInputType.msg  DeviceOutputType.msg  DeviceProductMsg.msg  DeviceTestType.msg  Digit.msg  Digit5.msg  DigitConfigMessageID.msg  DigitConfigMsg.msg  DigitErrorMsg.msg  DigitMoveMsg.msg  DigitPosnAllMsg.msg  DigitPosnMsg.msg  DigitPosnSetMsg.msg  DigitStatusAllMsg.msg  DigitStatusMsg.msg  (+42 more)
src/eci_ros/covvi_interfaces/srv/: DisableAllRealtimeCfg.srv  GetCurrentGrip.srv  GetDeviceIdentity.srv  GetDeviceProduct.srv  GetDigitConfig.srv  GetDigitError.srv  GetDigitPosn.srv  GetDigitPosnAll.srv  GetDigitStatus.srv  GetDigitStatusAll.srv  GetEciProductID.srv  GetEnvironmental.srv  GetFirmwarePICECI.srv  GetFirmwarePICHAND.srv  GetGripName.srv  GetHandDeviceClassType.srv  GetHandManufacturerID.srv  GetHandPowerOn.srv  GetHandSerialNumber.srv  GetHello.srv  GetMotorCurrent.srv  GetMotorCurrentAll.srv  GetMotorLimits.srv  GetOrientation.srv  GetPinchConfig.srv  GetSystemStatus.srv  RemoveUserGrip.srv  ResetRealtimeCfg.srv  SendUserGrip.srv  SetCurrentGrip.srv  SetDigitMove.srv  SetDigitPosn.srv  SetDigitPosnStop.srv  SetDirectControlClose.srv  SetDirectControlStop.srv  SetHandPowerOff.srv  SetRealtimeCfg.srv
src/grasp_ml_pack/: README.md  package.xml  setup.cfg  setup.py
src/grasp_ml_pack/config/: grasp_database.yaml  pipeline_params.yaml  teach_sequence.yaml
src/grasp_ml_pack/grasp_ml_pack/: cage_check.py  collision.py  conveyor_controller.py  grasp_executor.py  grasp_quality_net.py  gui_control_node.py  kinematics.py  manual_control_node.py  object_detector.py  perfect_grasp.py  pipeline.py  poses.py
src/grasp_ml_pack/launch/: conveyor_cell.launch.py
src/grasp_ml_pack/scripts/: generate_training_data.py  test_9cycles.py  test_kinematics.py  train_grasp_model.py  tune_descent.py  tune_rotate.py
src/grasp_ml_pack/worlds/: conveyor_cell.world  grasp_experiment.world
src/hand_pack/: README.md  package.xml  setup.cfg  setup.py
src/hand_pack/config/: cr10_covvi_controllers.yaml  hand_controller.yaml
src/hand_pack/hand_pack/: combined_gui.py  hand_gui.py  hand_node.py  urdf_helpers.py
src/hand_pack/launch/: cr10_covvi_gazebo.launch.py  cr10_covvi_rviz.launch.py  display.launch.py  hand_gazebo.launch.py  spawn_hand.launch.xml
src/hand_pack/rviz/: cr10_covvi.rviz  display_config.rviz
src/hand_pack/urdf/: linear_covvi_hand_gazebo.urdf  linear_covvi_hand_gazebo.urdf.bak  linear_covvi_hand_right.urdf
src/hand_pack/urdf/linear_meshes/: right_base_link.STL  right_index_distal.STL  right_index_knuckle.STL  right_little_follower.STL  right_little_proximal.STL  right_middle_knuckle.STL  right_middle_link.STL  right_ring_follower.STL  right_ring_link.STL  right_thumb_follower.STL  right_thumb_link.STL
src/hand_pack/worlds/: base_hand.world  factory.world
src/touch_pack/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/touch_pack/config/: tactile_controllers.yaml
src/touch_pack/launch/: tactile_cell.launch.py
src/touch_pack/meshes/: CelulaDeCarga_100kg_Montagem.stl  CelulaDeCarga_5kg_Montagem.step  CelulaDeCarga_5kg_Montagem.stl  PecasProtese.stl  touch_tool_square_20x20.stl
src/touch_pack/scripts/: analyze_force_runs.py  gen_loadcell_100kg_assembly_stl.py
src/touch_pack/test/: test_explorer_logic.py  test_kinematics.py  test_sync_logic.py
src/touch_pack/touch_pack/: constants.py  force_receiver_node.py  force_sync_node.py  kinematics.py  latency_probe.py  lc_serial.py  mirror_node.py  palpation_gui.py  palpation_logger.py  palpation_report.py  real_driver.py  real_pose_sync.py  tactile_explorer.py  touch_receiver_node.py  touch_source.py  ui_helpers.py
src/touch_pack/urdf/: hand_coupler.urdf  touch_tool_square_20x20.urdf
src/touch_pack/worlds/: research_lab.world
src/touch_pack_msgs/: CMakeLists.txt  package.xml
src/touch_pack_msgs/msg/: PalpationStart.msg  PalpationStatus.msg  SyncedTouch.msg
(+191 files in other folders)
