<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_pack</name>
  <version>0.0.1</version>
  <description>Digital Twin da COVVI Hand para Gazebo e ROS 2</description>
  <maintainer email="lucaspmartins14@gmail.com">lucas-pc</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <exec_depend>rqt_joint_trajectory_controller</exec_depend>

  <!-- cage_check do grasp_ml_pack (opcional via soft-import) -->
  <exec_depend>grasp_ml_pack</exec_depend>

  <!-- mesh do acoplador da prótese (PecasProtese.stl) -->
  <exec_depend>touch_pack</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>