<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>touch_pack_msgs</name>
  <version>0.1.0</version>
  <description>
    Mensagens tipadas da célula de palpação tátil (touch_pack):
    comando de início e status do experimento — substituem o JSON
    serializado em std_msgs/String (sem validação de schema).
  </description>
  <maintainer email="lucaspmartins14@gmail.com">Lucas Martins</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
