cmake_minimum_required(VERSION 3.8)
project(covvi_interfaces)

if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

find_package(rosidl_default_generators REQUIRED)
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/OrientationMsg.msg"
  "msg/DiscoveryResponseMsg.msg"
  "msg/GripNameIndex.msg"
  "msg/DiscoveryMsg.msg"
  "msg/CommandString.msg"
  "msg/FirmwareBleMsg.msg"
  "msg/CurrentGripTableMsg.msg"
  "msg/HandPowerMsg.msg"
  "msg/CurrentGripGripIdMsg.msg"
  "msg/DeviceInfoMsg.msg"
  "msg/BaseStrEnum.msg"
  "msg/EnvironmentalMsg.msg"
  "msg/BulkMsg.msg"
  "msg/DiscoveryRequestMsg.msg"
  "msg/DigitTouchAllMsg.msg"
  "msg/DigitMoveMsg.msg"
  "msg/FourOctetAddress.msg"
  "msg/BulkRequestMsg.msg"
  "msg/PinchConfigMsg.msg"
  "msg/DirectControlMsg.msg"
  "msg/DigitPosnMsg.msg"
  "msg/Speed.msg"
  "msg/FirmwareMessageID.msg"
  "msg/NetDevice.msg"
  "msg/DigitPosnAllMsg.msg"
  "msg/FirmwarePicMsg.msg"
  "msg/RealtimeCfgMsg.msg"
  "msg/ControlMsg.msg"
  "msg/DeviceInputType.msg"
  "msg/DigitErrorMsg.msg"
  "msg/FirmwareMaxMsg.msg"
  "msg/DeviceTestType.msg"
  "msg/ProductString.msg"
  "msg/Firmware.msg"
  "msg/Hostname.msg"
  "msg/Digit5.msg"
  "msg/CurrentGrip.msg"
  "msg/HelloMsg.msg"
  "msg/RealtimeMsg.msg"
  "msg/SystemStatusMsg.msg"
  "msg/Table.msg"
  "msg/RemoveUserGripCmdMsg.msg"
  "msg/Percentage.msg"
  "msg/ProductID.msg"
  "msg/FirmwareMsg.msg"
  "msg/CurrentGripMsg.msg"
  "msg/DigitStatusMsg.msg"
  "msg/FirmwareFramMsg.msg"
  "msg/DeviceClass.msg"
  "msg/UpdateStatus.msg"
  "msg/FirmwareFpgaMsg.msg"
  "msg/ElectrodeValueMsg.msg"
  "msg/BulkResponseMsg.msg"
  "msg/GripNameMsg.msg"
  "msg/DigitConfigMsg.msg"
  "msg/BuiltinGripID.msg"
  "msg/DigitStatusAllMsg.msg"
  "msg/BaseControlMsg.msg"
  "msg/DigitPosnMessageID.msg"
  "msg/DeviceGlove.msg"
  "msg/InputStatusMsg.msg"
  "msg/HandFirmwarePicMsg.msg"
  "msg/RealtimeCfg2Msg.msg"
  "msg/SixOctetAddress.msg"
  "msg/ElectrodeValueMessageID.msg"
  "msg/BaseMessageID.msg"
  "msg/GripNameMessageID.msg"
  "msg/Product.msg"
  "msg/TableIndex.msg"
  "msg/BaseMessage.msg"
  "msg/SendUserGripCmdMsg.msg"
  "msg/CommandCode.msg"
  "msg/UserGripCmdMsg.msg"
  "msg/UserGripResMsg.msg"
  "msg/Language.msg"
  "msg/DeviceProductMsg.msg"
  "msg/BaseIntEnum.msg"
  "msg/Digit.msg"
  "msg/DigitConfigMessageID.msg"
  "msg/DiscoveryConfigMsg.msg"
  "msg/DeviceClassType.msg"
  "msg/DeviceColour.msg"
  "msg/DigitErrorMessageID.msg"
  "msg/MotorLimitsMsg.msg"
  "msg/UserGripMsg.msg"
  "msg/DirectControlCommand.msg"
  "msg/ElectrodeValue.msg"
  "msg/DiscoveryBaseMsg.msg"
  "msg/DeviceIdentityMsg.msg"
  "msg/GripName.msg"
  "msg/EciFirmwarePicMsg.msg"
  "msg/UserGripID.msg"
  "msg/MessageID.msg"
  "msg/DigitStatusMessageID.msg"
  "msg/BulkDataType.msg"
  "msg/RealtimeCfg.msg"
  "msg/DigitPosnSetMsg.msg"
  "msg/DigitMoveMessageID.msg"
  "msg/MotorCurrentAllMsg.msg"
  "msg/DeviceOutputType.msg"
  "msg/DeviceHandType.msg"
  "msg/BasePrimitive.msg"
  "msg/CurrentGripID.msg"
  "msg/UploadDownLoadMsg.msg"
  "msg/MotorCurrentMessageID.msg"
  "msg/MotorCurrentMsg.msg"
  "msg/Command.msg"
  "srv/GetOrientation.srv"
  "srv/GetCurrentGrip.srv"
  "srv/GetFirmwarePICECI.srv"
  "srv/SetDigitPosnStop.srv"
  "srv/GetHandPowerOn.srv"
  "srv/GetDigitPosnAll.srv"
  "srv/GetEciConnected.srv"
  "srv/SetDigitPosn.srv"
  "srv/SetDirectControlClose.srv"
  "srv/GetDigitPosn.srv"
  "srv/RemoveUserGrip.srv"
  "srv/SetHandPowerOn.srv"
  "srv/GetGripName.srv"
  "srv/SetDirectControlOpen.srv"
  "srv/GetHandProductID.srv"
  "srv/SetCurrentGrip.srv"
  "srv/GetDeviceProduct.srv"
  "srv/GetDigitStatusAll.srv"
  "srv/SetDigitMove.srv"
  "srv/GetDigitError.srv"
  "srv/GetEciDeviceClassType.srv"
  "srv/GetMotorCurrent.srv"
  "srv/GetPinchConfig.srv"
  "srv/DisableAllRealtimeCfg.srv"
  "srv/GetEnvironmental.srv"
  "srv/GetHandDeviceClassType.srv"
  "srv/GetFirmwarePICHAND.srv"
  "srv/GetHandManufacturerID.srv"
  "srv/GetHandSerialNumber.srv"
  "srv/GetMotorCurrentAll.srv"
  "srv/GetMotorLimits.srv"
  "srv/ResetUserGrips.srv"
  "srv/SetRealtimeCfg.srv"
  "srv/GetEciProductID.srv"
  "srv/ResetRealtimeCfg.srv"
  "srv/SetDirectControlStop.srv"
  "srv/GetEciSerialNumber.srv"
  "srv/GetEciError.srv"
  "srv/GetDigitStatus.srv"
  "srv/GetDeviceIdentity.srv"
  "srv/GetEciManufacturerID.srv"
  "srv/SendUserGrip.srv"
  "srv/SetHandPowerOff.srv"
  "srv/GetHello.srv"
  "srv/GetHandConnected.srv"
  "srv/GetDigitConfig.srv"
  "srv/EnableAllRealtimeCfg.srv"
  "srv/GetEciPowerOn.srv"
  "srv/GetHandError.srv"
  "srv/GetSystemStatus.srv"

)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_export_dependencies(rosidl_default_runtime)
ament_package()